--- a/_default.html
+++ b/_default.html
@@ -29,7 +29,7 @@
         <a href="{{ site.baseurl }}" class="btn">Home</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+        <a href="{{ site.github.page.2 }}" class="btn">Download .page.2</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
