--- a/_default.html
+++ b/_default.html
@@ -31,6 +31,7 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.page.2 }}" class="btn">Download .page.2</a>
         <a href="{{ site.github.page.3 }}" class="btn">Download .page.3</a>
+        <a href="{{ site.github.page.4 }}" class="btn">Download .page.4</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
